--- a/Relatorio_2/LabsisWebPage/modelo/Pages/page_6.html
+++ b/Relatorio_2/LabsisWebPage/modelo/Pages/page_6.html
@@ -34,5 +34,11 @@
 <div style="color:green;margin-right:1.25em; display:inline-block;">
   div 3
 </div>
+<HR/>
+<p style="margin-left: 40px">This text is indented.</p>
+<HR/>
+<p style="text-indent: 40px">This text is indented.</p>
+<HR/>
+<blockquote>This text would be indented</blockquote>
 </body>
 </html>
