--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -734,8 +734,8 @@
 					qualquer origem, isto é também pode ser leituras de saidas, uart, i2c, etc. 
 					Outro pormenor é que só são aceites leituras diferentas das lidas anteriormente,
 					assim não existe redúndancia e o programa flui de forma <b>One Shot</b> podendo
-					esta entrar e sair pelo sistema sem qualquer interferência se o sinal não for reconhecido 
-					mas só uma unica vez.
+					esta entrar e sair pelo sistema sem qualquer interferência se o sinal não for reconhecido,
+					 mas só uma única vez.
 					<BR/>
 					<BR/>
 					Assim temos um sistema escalavel (<it><b>"recursion"</b></it>) e de fácil manuseamento.
