--- a/Relatorio_2/LabsisWebPage/Pages/page_8.html
+++ b/Relatorio_2/LabsisWebPage/Pages/page_8.html
@@ -21,5 +21,35 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/a7qRuUAyqCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 Not Supported
 </iframe>
+<br>
+<h1 style="background-color:powderblue;">This is a heading</h1>
+<br>
+<p style="background-color:tomato;">This is a paragraph.</p>
+<br>
+<h1 style="color:blue;">This is a heading</h1>
+<br>
+<p style="color:red;">This is a paragraph.</p> 
+<br>
+<h1 style="font-family:verdana;">This is a heading</h1>
+<br>
+<p style="font-family:courier;">This is a paragraph.</p>
+<br>
+<h1 style="font-size:300%;">This is a heading</h1>
+<br>
+<p style="font-size:160%;">This is a paragraph.</p> 
+<br>
+<h1 style="text-align:center;">Centered Heading</h1>
+<br>
+<p style="text-align:center;">Centered paragraph.</p> 
+<br>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
